# pdns

.github/actions/spell-check/: allow.txt
docs/lua-records/: functions.rst
modules/geoipbackend/: Makefile.am  OBJECTLIBS  geoipbackend.cc  geoipbackend.hh  geoipinterface-dat.cc  geoipinterface-mmdb.cc  geoipinterface.cc  geoipinterface.hh
modules/gmysqlbackend/: Makefile.am  smysql.cc  smysql.hh  utility.hh  wmutility.hh
pdns/: .gitignore  lua-record.cc
pdns/backends/gsql/: ssql.hh
